--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 myenv/
 fastapi/app/__pycache__
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+react_fastapi/node_modules/
+
+
