tsconfig settings to target es6 and add mui settings

--- a/react_fastapi_app/tsconfig.json
+++ b/react_fastapi_app/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
+      "es6",
       "dom",
       "dom.iterable",
       "esnext"
     ],
     "allowJs": true,
+    // ADDED FOR MATERIAL UI
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    // 
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
